Showcase button width fix - buttons were wrapping on FF in the simulator
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@41812 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/samples/jsf/mobileshowcase/src/main/webapp/resources/css/showcase.css
+++ b/samples/jsf/mobileshowcase/src/main/webapp/resources/css/showcase.css
@@ -195,7 +195,7 @@ html.iphone .examplesLink{
     font-size: 12px;
 }
 .buttons .mobi-fieldset-row{ text-align:center; }
-.buttons .mobi-button{ min-width:125px;max-width:300px;width:40%; }
+.buttons .mobi-button{ min-width:120px;max-width:300px;width:40%; }
 .accordionpage{ min-height:1000px;}
 
 .results label{ 
